--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "consolidate": "^0.16.0",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "html": "^1.0.0",
+    "http": "^0.0.1-security",
     "jsdom": "^20.0.1",
     "mssql": "^9.0.1",
     "mysql": "^2.18.1",
